syntax = "proto3";

package user;
option go_package = "github.com/scmbr/oms/user-service/internal/pb;userpb";
service UserService {
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc ValidateRefreshToken(ValidateRefreshRequest) returns (ValidateRefreshResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string user_id = 1;
    string email = 2;
    string role = 3;
    string refresh_token = 4;
    string refresh_expires_at = 5;
}

message ValidateRefreshRequest {
    string refresh_token = 1;
}

message ValidateRefreshResponse {
    string user_id = 1;
    string email = 2;
    string role = 3;
}
